# solana-stablecoin-standard

./: .gitignore  .sss-token.json  Anchor.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Surfpool.toml  codama.config.ts  demo-commands.txt  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.claude/: settings.json
.claude/agents/: anchor-engineer.md  compliance-engineer.md  solana-architect.md  solana-qa-engineer.md  solana-researcher.md  tech-docs-writer.md
.claude/commands/: audit-solana.md  build-program.md  deploy.md  explain-code.md  plan-feature.md  quick-commit.md  setup-ci-cd.md  test-and-fix.md  test-rust.md  test-typescript.md  write-docs.md
.claude/rules/: anchor.md  typescript.md
.claude/skills/: SKILL.md  ecosystem.md  idl-codegen.md  programs-anchor.md  resources.md
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
backend/src/: error.rs  lib.rs  main.rs  persistence.rs  solana.rs
backend/src/routes/: compliance.rs  health.rs  indexer.rs  metrics.rs  mint_burn.rs  mod.rs  operator_timeline.rs  webhooks.rs
backend/src/services/: cache.rs  compliance.rs  indexer.rs  mint_burn.rs  mod.rs  operator_snapshots.rs  webhook.rs
backend/tests/: integration_tests.rs
cli/: package.json  tsconfig.json
cli/src/: helpers.ts  output.ts
cli/src/commands/: audit-log.ts  authority.ts  blacklist.ts  burn.ts  config.ts  freeze.ts  holders.ts  init.ts  mint.ts  minters.ts  pause.ts  roles.ts  seize.ts  status.ts  webhook.ts
cli/tests/: cli.test.ts  live.test.ts  output.test.ts  program-ids.test.ts
docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  CONSTANTS.md  DEPLOYMENT.md  DEVNET_DEPLOYMENT.md  ERC-20-REFERENCE.md  ERRORS.md  EVENTS.md  GENIUS-ACT.md  MODULES.md  OPERATIONS.md  PATTERNS.md  SDK.md  SECURITY_AUDIT.md  SECURITY_CHECKLIST.md  SSS-1.md  SSS-2.md  SSS-3.md  SSS-4.md  TESTING.md  specs-SSS05.md  specs-SSS06.md  specs-SSS07.md  specs-SSS08.md  specs-SSS09.md  specs-SSS10.md  specs-SSS11.md
examples/: custom-config.json  custom-sss1.toml  custom-sss2.toml
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuditLog.tsx  Blacklist.tsx  ConnectHero.tsx  Dashboard.tsx  DemoStepCard.tsx  DemoWizard.tsx  FreezeThaw.tsx  Header.tsx  Initialize.tsx  MintBurn.tsx  MobileDrawer.tsx  PauseControl.tsx  Roles.tsx  Seize.tsx  Sidebar.tsx  Transfer.tsx  WalletProvider.tsx
frontend/src/contexts/: ConnectionContext.tsx  PrivyProviderWrapper.tsx
frontend/src/hooks/: useDemoWizard.ts  usePrivySolana.ts  useSDK.ts  useStablecoin.ts
frontend/src/lib/: constants.ts  hookIdl.json  idl.json
infrastructure/grafana/provisioning/dashboards/: sss-overview.json
infrastructure/prometheus/: prometheus.yml
programs/oracle/: Cargo.toml
programs/oracle/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs  switchboard.rs
programs/oracle/src/instructions/: initialize.rs  mod.rs  push_price.rs  refresh_price.rs  update_config.rs
programs/privacy/: Cargo.toml
programs/privacy/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/privacy/src/instructions/: add_to_allowlist.rs  initialize.rs  mod.rs  remove_from_allowlist.rs  update_config.rs
programs/sss/: Cargo.toml
programs/sss-10/: Cargo.toml
programs/sss-10/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss-10/src/instructions/: approve_mint.rs  approve_redeem.rs  cancel_mint_request.rs  execute_mint.rs  execute_redeem.rs  initialize.rs  mod.rs  reject_mint.rs  (+2 more)
programs/sss-11/: Cargo.toml
programs/sss-11/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss-11/src/instructions/: deposit_collateral.rs  initialize.rs  issue_credit.rs  liquidate.rs  mod.rs  open_position.rs  repay.rs  withdraw_collateral.rs
programs/sss-allowlist/: Cargo.toml
programs/sss-allowlist/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss-allowlist/src/instructions/: add_to_allowlist.rs  initialize_allowlist_config.rs  mod.rs  remove_from_allowlist.rs  update_allowlist_mode.rs
programs/sss-caps/: Cargo.toml
programs/sss-caps/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss-math/: Cargo.toml
programs/sss-math/src/: lib.rs
programs/sss-timelock/: Cargo.toml
programs/sss-timelock/src/: error.rs  events.rs  lib.rs  state.rs
programs/sss/src/: constants.rs  error.rs  events.rs  lib.rs  state.rs
programs/sss/src/instructions/: accept_authority.rs  add_to_blacklist.rs  assign_role.rs  burn.rs  cancel_authority.rs  create_minter.rs  freeze_account.rs  initialize.rs  mint.rs  mod.rs  pause.rs  propose_authority.rs  remove_from_blacklist.rs  reset_minter_quota.rs  seize.rs  thaw_account.rs  transfer_authority.rs  unpause.rs  update_blacklist_evidence.rs  update_minter.rs  update_role.rs  update_roles.rs  view.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: constants.rs  error.rs  lib.rs
programs/transfer-hook/src/instructions/: initialize_extra_account_metas.rs  mod.rs  transfer_hook.rs
scripts/: demo-record.sh  demo-setup.sh  deploy-devnet.sh  deploy-devnet.ts  deploy-sss2-devnet.ts  test-local.sh
sdk/compliance/: package.json
sdk/compliance/src/: audit.ts  blacklist.ts  compliance.ts  index.ts
sdk/core/: package.json
sdk/core/src/: batch.ts  builder.ts  events.ts  index.ts  oracle.ts  pda.ts  presets.ts  privacy.ts  retry.ts  simulation.ts  stablecoin.ts  types.ts  utils.ts
sdk/token/: package.json
sdk/token/src/: index.ts
tests/: audit-fixes.ts  authority-rotation.ts  edge-cases.ts  evidence-chain.ts  full-lifecycle.ts  multi-minter.ts  oracle.ts  privacy.ts  roles.ts  security.ts  seize.ts  sss-1.ts  sss-2.ts  transfer-hook.ts  transfers.ts
tests/litesvm/: Cargo.toml
tests/litesvm/src/: lib.rs
trident-tests/: Cargo.toml  Trident.toml
trident-tests/fuzz_0/: test_fuzz.rs
trident-tests/src/: lib.rs
trident-tests/tests/: compliance.rs  quotas.rs  roles.rs
tui/: Cargo.toml
tui/src/: app.rs  data.rs  main.rs  ui.rs
(+16 files in other folders)
