[package]
name = "sss-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Solana Stablecoin Standard (SSS)"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
sha2 = "0.10"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
