[package]
name = "sss-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API server for the Solana Stablecoin Standard (SSS)"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
hex = "0.4"

# Encoding
base64 = "0.21"
bs58 = "0.4"

# Solana
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
