[package]
name = "sss-fuzz-tests"
version = "0.1.0"
description = "Property-based fuzz tests for the Solana Stablecoin Standard program"
edition = "2021"
publish = false

[dependencies]
sss = { path = "../programs/sss", features = ["no-entrypoint"] }
anchor-lang = "0.31.1"

[dev-dependencies]
proptest = "1.4"
