[package]
name = "sss-oracle"
version = "0.1.0"
description = "SSS Oracle Integration Module - Switchboard price feeds for non-USD stablecoin pegs"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token"] }
constant_time_eq = "=0.3.1"
blake3 = "=1.5.5"
