[package]
name = "sss-allowlist"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
constant_time_eq = "=0.3.1"
blake3 = "=1.5.5"
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
