[package]
name = "sss"
version = "0.1.0"
description = "Solana Stablecoin Standard - Modular stablecoin program with SSS-1 and SSS-2 presets"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sss"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["token", "associated_token", "metadata"] }
spl-token-2022 = { version = "6.0.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.5.0"
spl-transfer-hook-interface = "0.8.0"
spl-pod = "0.4.0"
spl-type-length-value = "0.6.0"
constant_time_eq = "=0.3.1"
blake3 = "=1.5.5"
