[package]
name = "sss-litesvm-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
litesvm = "0.6"
solana-sdk = "2.1"
solana-program = "2.1"
anchor-lang = "0.31.1"
sss = { path = "../../programs/sss", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }
borsh = "0.10"
sha2 = "0.10"
